--- a/provisioning/vm-master/kubernetes-dashboard-rbac.yaml
+++ b/provisioning/vm-master/kubernetes-dashboard-rbac.yaml
@@ -11,4 +11,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: kubernetes-dashboard
-  namespace: kube-system
+  namespace: kubernetes-dashboard
